# covenant

./: .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  RAIL-HOMOLOGATION.md  README.md  TASKER_DEBUG.md  aom-tab-preview.html  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.cargo/: config.toml
.codex/: config.toml
.covenant/cdlc/: cdlc.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-landing.yml  release-linux.yml  release-macos.yml  release-manifest.yml  release-windows.yml
.opencode/agent/: design-rules-auditor.md  pty-forensics.md  safety-blocklist-reviewer.md
.opencode/commands/: horizon.md  verify-live.md
.pi/prompts/: green.md  horizon.md
.sdd/: README.md
.sdd/steering/: product.md  structure.md  tech.md
crates/agent/: Cargo.toml
crates/agent/src/: context_miner.rs  lib.rs  pi_rpc.rs  provider.rs  pty_prompt.rs  respond_tool.rs  safety.rs  spec_author.rs
crates/agent/src/acp/: mod.rs  perception.rs  policy.rs  protocol.rs  run.rs  session.rs
crates/agent/src/pi_rpc/: framer.rs  mod.rs  protocol.rs  session.rs
crates/agent/src/provider/: anthropic.rs  azure_foundry.rs  mod.rs  openai_compat.rs  openai_sse.rs
crates/agent/src/spec_author/: prompt.md  stream.rs  tools.rs
crates/agent/tests/: error_display.rs  provider_anthropic.rs  provider_azure_foundry.rs  provider_openai_compat.rs  record_llm_call.rs  spec_author.rs  thinking.rs
crates/app/: .gitignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json
crates/app/capabilities/: default.json  notch.json
crates/app/icons/: icon.icns
crates/app/src/: acp_commands.rs  acp_world.rs  aom.rs  archetypes.rs  beacon.rs  browser.rs  canon_eval.rs  canon_miner.rs  canon_registry.rs  capabilities_commands.rs  cdlc_eval.rs  cdlc_miner.rs  cdlc_registry.rs  claude_statusline.rs  cli_open.rs  connectivity.rs  context.rs  convergence.rs  cost.rs  covenant_board.rs  covenant_gist.rs  covenant_review.rs  cross_session.rs  discord_presence.rs  drafts.rs  embedder.rs  exec_vitals.rs  executor_idle.rs  familiar_commands.rs  favorites_commands.rs  file_search.rs  fix_proposer.rs  git_tools.rs  history_import.rs  lib.rs  lsp_commands.rs  main.rs  marketplace.rs  memory.rs  mission_pair.rs  (+39 more)
crates/app/src/cloud_sync/: commands.rs  mod.rs  secrets.rs
crates/app/src/email/: client.rs  digest.rs  mod.rs  templates.rs
crates/app/src/teammate/: anthropic_http.rs  build_classify.rs  commands.rs  github_tools.rs  handoff.rs  handoff_safety.rs  llm.rs  mod.rs  openai_http.rs  runtime.rs  sentiment_resolver.rs  spec_edit_tracker.rs  task_supervisor.rs  tools.rs  types.rs  world_snapshot.rs
crates/app/src/telegram/: client.rs  inbound.rs  mod.rs  outbound.rs  status.rs  types.rs
crates/app/tests/: compile_fail.rs  operator_registry.rs  teammate_runtime.rs  teammate_supervisor_e2e.rs
crates/app/tests/compile_fail/: parse_failure_to_outbound.rs  parse_failure_to_outbound.stderr
crates/blocks/: Cargo.toml
crates/blocks/src/: executor_phase.rs  lib.rs
crates/blocks/tests/: pwsh_fixtures.rs  snippet_integration.rs
crates/canon/: Cargo.toml
crates/canon/src/: compile.rs  detect.rs  eval.rs  install.rs  inventory.rs  kind.rs  lib.rs  manifest.rs  mcp.rs  new_unit.rs  project.rs  types.rs
crates/capabilities/: Cargo.toml
crates/capabilities/examples/: scan_real.rs
crates/capabilities/src/: frontmatter.rs  lib.rs  model.rs  scaffold.rs  watcher.rs  writer.rs
crates/capabilities/src/adapters/: claude.rs  codex.rs  copilot.rs  covenant.rs  mod.rs  opencode.rs  pi.rs  shared.rs
crates/cdlc/: Cargo.toml
crates/familiar/: Cargo.toml  README.md
crates/familiar/migrations/: 001_init.sql
crates/familiar/src/: agent.rs  cost.rs  directive.rs  error.rs  identity.rs  lib.rs  manager.rs  memory.rs  observer.rs  prompts.rs  summarizer.rs
crates/familiar/tests/: observer.rs  summary.rs
crates/lsp/: Cargo.toml  servers.json
crates/lsp/src/: framing.rs  install.rs  lib.rs  registry.rs  root.rs  runtime.rs  server.rs
crates/lsp/tests/: smoke.rs  smoke_cs.rs  smoke_java.rs  smoke_ts.rs
crates/metrics/: Cargo.toml
crates/pty/: Cargo.toml
crates/pty/src/: fg_proc.rs  lib.rs  shell.rs
crates/pty/tests/: windows_smoke.rs
crates/score/: Cargo.toml
crates/score/src/: achievements.rs  agent_label.rs  auth.rs  commit_scanner.rs  context.rs  filter.rs  lib.rs  otel.rs  profile_card.rs  session.rs  spec_scanner.rs  spec_watcher.rs  store.rs  sync.rs  types.rs
crates/score/tests/: achievements.rs  agent_label.rs  auth.rs  breakdown.rs  commit_scanner.rs  context.rs  external_claude_code.rs  external_codex.rs  filter.rs  llm_calls.rs  otel.rs  recorder.rs  session.rs  spec_scanner.rs  spec_watcher.rs  specs.rs  store.rs  sync.rs
crates/session/: Cargo.toml
crates/session/src/: idle.rs  lib.rs  operator_ref.rs
crates/session/tests/: idle_integration.rs
crates/store/: Cargo.toml
design/: activity-multi-agent-proposals.html  executor-rail-variants.html  file-tree-active-row-variants.html  notch-icons-preview.html  notch-pill-variants.html  statusbar-preview.html  statusbar-reorg-proposal.html
design-previews/: chip-homogeneity.html  context-menu-prompts-proposals.html  mention-picker-tabs.html  operator-header-proposal.html  tab-styles-vertical.html  tab-styles.html
docs/: DESIGN.md  canon-context-is-the-new-code.md  cdlc-multi-export.md  covenant-metrics.md  executor-capabilities.md  install-windows.md  next-features.md  operator-memory.md  updater.md
docs/mockups/: done-sounds.html  (+9 more)
landing/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
operator-souls/: archivist.md  diplomat.md  guardian.md  scout.md  surgeon.md
scripts/: covenant-cli.sh  install-linux.sh  install.sh
shell-integration/: covenant-statusline.sh  osc133.bash  osc133.fish  osc133.ps1  osc133.zsh
ui/: index.html
(+917 files in other folders)
