[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/pty",
    "crates/blocks",
    "crates/metrics",
    "crates/session",
    "crates/agent",
    "crates/familiar",
    "crates/capabilities",
    "crates/score",
    "crates/store",
    "crates/cdlc",
]

[workspace.package]
version = "0.8.123"
edition = "2021"
authors = ["Karluiz"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
vt100 = "0.15"
vte = "0.14"
bytes = "1"
ulid = { version = "1", features = ["serde"] }
strip-ansi-escapes = "0.2"
ignore = "0.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
dirs = "5"
async-trait = "0.1"
sysinfo = "0.33"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
karl-metrics = { path = "crates/metrics" }

# Tauri
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "none"
debug = "line-tables-only"
