[package]
name = "karl-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Anthropic streaming client for karl-terminal's super-agent"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = { workspace = true }
async-trait = { workspace = true }
once_cell = "1"
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
async-trait = { workspace = true }
