[package]
name = "karl-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Karl Terminal — Tauri shell"

[lib]
# `_lib` suffix avoids a Windows linker conflict with the bin name.
# https://github.com/rust-lang/cargo/issues/8519
name = "karl_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
tempfile = "3"

karl-pty = { path = "../pty" }
karl-blocks = { path = "../blocks" }
karl-session = { path = "../session" }
karl-agent = { path = "../agent" }

[dev-dependencies]
tempfile = "3"
