[package]
name = "covenant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Covenant — AI-coordinated terminal"

[lib]
# `_lib` suffix avoids a Windows linker conflict with the bin name.
# https://github.com/rust-lang/cargo/issues/8519
name = "covenant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
notify = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
tempfile = "3"
rusqlite = { workspace = true }
sqlite-vec = "0.1"
zerocopy = "0.7"
fastembed = "5"
thiserror = { workspace = true }
regex = { workspace = true }
strip-ansi-escapes = { workspace = true }
ignore = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
trash = "5"
async-trait = { workspace = true }
reqwest = { workspace = true }
fontdb = "0.23"
karl-pty = { path = "../pty" }
karl-blocks = { path = "../blocks" }
karl-session = { path = "../session" }
karl-agent = { path = "../agent" }
karl-familiar = { path = "../familiar" }
karl-capabilities = { path = "../capabilities" }
karl-score = { path = "../score" }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
trybuild = "1"
