[package]
name = "covenant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Covenant — AI-coordinated terminal"

[lib]
# `_lib` suffix avoids a Windows linker conflict with the bin name.
# https://github.com/rust-lang/cargo/issues/8519
name = "covenant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
url = "2"
base64 = "0.22"
notify = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
tempfile = "3"
rusqlite = { workspace = true }
store = { path = "../store" }
sqlite-vec = "0.1"
zerocopy = "0.7"
fastembed = { version = "5", optional = true }
thiserror = { workspace = true }
regex = { workspace = true }
strip-ansi-escapes = { workspace = true }
ignore = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
trash = "5"
async-trait = { workspace = true }
reqwest = { workspace = true }
fontdb = "0.23"
karl-pty = { path = "../pty" }
karl-blocks = { path = "../blocks" }
karl-session = { path = "../session" }
karl-agent = { path = "../agent" }
karl-familiar = { path = "../familiar" }
karl-capabilities = { path = "../capabilities" }
karl-score = { path = "../score" }
karl-cdlc = { path = "../cdlc" }
dirs = { workspace = true }
sysinfo = { workspace = true }
karl-metrics = { workspace = true }
karl-lsp = { workspace = true }
hostname = "0.4"

[features]
default = ["embeddings"]
# Local semantic-search / operator-memory embeddings via `fastembed`
# (ONNX Runtime through `ort`). Optional because `ort` ships no
# `x86_64-apple-darwin` prebuilt, so the Intel macOS release is built with
# `--no-default-features` to drop `ort`/ONNX from the dependency graph.
# With this feature off, `Embedder` becomes a stub whose `new()` errors and
# every embedding call site degrades gracefully (it already warns + skips).
embeddings = ["dep:fastembed"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
block2 = "0.5"

[dev-dependencies]
tempfile = "3"
mockito = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
trybuild = "1"
