[package]
name = "karl-capabilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Capability (skills/commands/hooks/MCPs) discovery + edit across Claude Code / Copilot CLI / opencode"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
