[package]
name = "karl-capabilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Capability (skills/commands/hooks/MCPs) discovery + edit across Claude Code / Copilot CLI / opencode"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = "6"
tokio = { workspace = true, default-features = false, features = ["sync", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread", "time", "sync"] }
