[package]
name = "karl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
