[package]
name = "karl-score"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Covenant Score — local prompt/commit tracking"

[dependencies]
rusqlite = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1"

[dev-dependencies]
tempfile = "3"
