[package]
name = "karl-score"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Covenant Score — local prompt/commit tracking"

[dependencies]
rusqlite = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1"
notify = "6"
walkdir = "2"
dirs = "5"
reqwest = { workspace = true, features = ["json"] }
# keyring v3 makes the OS-keychain backends opt-in features. Without one of
# these, it silently falls back to an in-memory `mock` store that never
# persists — tokens/JWT vanish on restart ("Sync failed: not signed in").
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# OpenTelemetry — behind the `otel` feature so the dependency chain is opt-in.
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["metrics", "grpc-tonic"], optional = true }

[features]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dev-dependencies]
tempfile = "3"
mockito = "1"
rusqlite = { workspace = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "metrics", "testing"] }
