[package]
name = "karl-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Session lifecycle and event bus for karl-terminal"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
ulid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strip-ansi-escapes = { workspace = true }
vt100 = { workspace = true }
regex = { workspace = true }
libc = "0.2"

karl-pty = { path = "../pty" }
karl-blocks = { path = "../blocks" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
